--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
 
   deploy_source:
-    name: handleCreate
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: checkout source code
@@ -16,9 +16,6 @@ jobs:
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: handleCreate
           source: src/handleCreate
-
-    name: handleDelete
-    runs-on: ubuntu-latest
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
@@ -30,9 +27,6 @@ jobs:
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: handleDelete
           source: src/handleDelete
-
-    name: handleGet
-    runs-on: ubuntu-latest
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
@@ -44,9 +38,6 @@ jobs:
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: handleGet
           source: src/handleGet
-
-    name: handleDelete
-    runs-on: ubuntu-latest
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
