--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,52 +2,32 @@ name: deploy to lambda
 on: [push]
 jobs:
 
-  deploy_source:
-    name: handleCreate
+  deploy_zip:
+    name: deploy lambda function
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: [1.20.x]
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: ${{ matrix.go-version }}
+      - name: Build binary
+        run: |
+          cd ./ && CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -v -a -o main main.go && zip deployment.zip main
       - name: default deploy
         uses: appleboy/lambda-action@v0.1.9
         with:
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
-          function_name: handleCreate
-          source: src/handleCreate/index.js
-      - name: install dependencies
-        run: npm --prefix ./src install
-
-      - name: checkout source code
-        uses: actions/checkout@v3
-      - name: default deploy
-        uses: appleboy/lambda-action@v0.1.9
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: handleDelete
-          source: src/handleDelete
-  
-      - name: checkout source code
-        uses: actions/checkout@v3
-      - name: default deploy
-        uses: appleboy/lambda-action@v0.1.9
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: handleGet
-          source: src/handleGet
-  
-      - name: checkout source code
-        uses: actions/checkout@v3
-      - name: default deploy
-        uses: appleboy/lambda-action@v0.1.9
-        with:
-          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: ${{ secrets.AWS_REGION }}
-          function_name: handleUpdate
-          source: src/handleUpdate
+          function_name: gorush
+          zip_file: example/deployment.zip
+          memory_size: 128
+          timeout: 10
+          handler: foobar
+          role: arn:aws:lambda:us-east-1:314524465458:function:handleCreate
+          runtime: nodejs18.x
