--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,11 +11,7 @@ jobs:
     steps:
       - name: checkout source code
         uses: actions/checkout@v3
-      - name: Install Go
-        uses: actions/setup-go@v1
-        with:
-          go-version: ${{ matrix.go-version }}
-      - name: Build binary
+      - name: Zip up project
         run: |
           zip -r deployment.zip .
       - name: default deploy
@@ -25,7 +21,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ${{ secrets.AWS_REGION }}
           function_name: gorush
-          zip_file: src/deployment.zip
+          zip_file: deployment.zip
           memory_size: 128
           timeout: 10
           handler: foobar
