--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Zip up project
         run: |
-          zip -r deployment.zip .
+          zip -r create.zip ./src/handleCreate/index.js ./node_modules
       - name: default deploy
         uses: appleboy/lambda-action@v0.1.9
         with:
