--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,5 +24,5 @@ jobs:
           memory_size: 128
           timeout: 10
           handler: foobar
-          function_name: handleCreate
+          function_name: handler
           runtime: nodejs18.x
