--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,5 @@ jobs:
           zip_file: create.zip
           memory_size: 128
           timeout: 10
-          handler: foobar
-          function_name: handler
+          function_name: handleCreate
           runtime: nodejs18.x
